--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Учебный проект</title>
 </head>
 <body>
-    <h1>ДОБРО ПОЖАЛОВАТЬ НА МОЙ САЙТ</h1>>
+    <h1>ДОБРО ПОЖАЛОВАТЬ НА МОЙ САЙТ</h1>
 
     <p>
         Здесь я знакомлюсь с современными технологиями в области веб-разработки.
