--- a/index.html
+++ b/index.html
@@ -1,33 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <title>Учебный проект</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>ДОБРО ПОЖАЛОВАТЬ НА МОЙ САЙТ</h1>
-
+    <P>
+      Здесь я знакомлюсь с современными технологиями в область веб-разработки.
+       В частности изучаю основы современоой верстки веб-страниц и их оформления,
+       а также работу логической части веб-страницы в браузере.
+    </P>
     <p>
-        Здесь я знакомлюсь с современными технологиями в области веб-разработки.
-        В частности изучаю основы современной верстки веб-страниц и их оформления,
-        а также работу логической части веб-страницы в браузере.
+      Для этого на данном сайте я буду практиковаться с HTML тегами и их атрибутами,
+      стилями CSS и их селекторами , а так же с синтаксисом и логами JavaScript.
     </p>
-
-    <p>
-        Для этого на данном сайте я буду практиковаться с HTML тегами и их атрибутами,
-        стилями CSS их селекторами, а так же с синтаксисом и логикой JavaScript.
-    </p>
-
     <h2>План действий:</h2>
     <ol>
-        <li>а</li>
-        <li>б</li>
-        <li>и</li>
+        <li>Верстка
+          <ul>
+            <li><a khref="pages/html_layout.html">HTML верстка</a></li>
+            <li>Табличная верстка</li>
+          </ul>
+        </li>
+        <li>
+          оформление
+          <ul>
+            <a href="pages/CSS.html">О CSS</a>
+          <li>Блочная верстка</li>
+          </ul>
+        </li>
+        <li>
+            Програмирование
+            <ul>
+                <a href="pages/JS.html">JS программирование</a>
+            </ul>
+        </li>
     </ol>
-    <ul>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-    </ul>
-</body>
+  </body>
 </html>
