--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <ol>
         <li>Верстка
           <ul>
-            <li><a khref="pages/html_layout.html">HTML верстка</a></li>
+            <li><a href="pages/html_layout.html">HTML верстка</a></li>
             <li>Табличная верстка</li>
           </ul>
         </li>
