--- a/index.html
+++ b/index.html
@@ -24,18 +24,29 @@
           </ul>
         </li>
         <li>
-          оформление
+          Оформление
           <ul>
-            <a href="pages/CSS.html">О CSS</a>
-          <li>Блочная верстка</li>
+              <li><a href="pages/CSS.html">О языке CSS</a></li>
+              <li>Блочная верстка</li>
           </ul>
         </li>
         <li>
             Програмирование
             <ul>
-                <a href="pages/JS.html">JS программирование</a>
+                <li><a href="pages/JS.html">JS программирование</a></li>
+                <ul>
+                    <li>Взаимодействие с DOM</li>
+                    <li>Взаимодействие с canvas</li>
+                </ul>
+                <li>Node JS програмирование</li>
             </ul>
         </li>
     </ol>
+    <h2>Проекты моих одноклассников</h2>
+        <ul>
+            <li>Иванов</li>
+            <li>Петров</li>
+            <li>Кто-нибудь</li>
+        </ul>
   </body>
 </html>
