--- a/pages/html_layout.html
+++ b/pages/html_layout.html
@@ -6,13 +6,17 @@
   </head>
   <body>
     <h1>О языке HTML</h1>
+    <h1>Общие сведения</h1>
     <p>
-      HTML - это язык разметк, для подробной информации
-      <a href='https://ru.wikipedia.org/wiki/HTML%22%3E'> сюда.</a>
-      За официальной информацией о тегах
-      <a href='https://developer.mozilla.org/ru/docs/Web/HTML%22%3E'> сюда.</a>
-      А за неофициальной, но удобной информацией
-      <a href='http://htmlbook.ru/html%22%3E'> сюда.</a>
+      Язык HYML отвечает за структуру и содержание страницы. Он состоит из команд, 
+      которые называются тегами. Любой тег состоит из имени, заключенного между знаками &#171;меньше	&#187; и &#171;больше&#187;.
+      Примеры тегов 	&#60;h1&#62;, &#60;p&#62;, &#60;ul&#62;. При этом все теги подразделяются на: парные,
+      обрабатывающие фрагменты текста, и одиночные, применимые ко всей странице более подробно информация о языке на 
+      <a href='https://ru.wikipedia.org/wiki/HTML%22%3E'> wikipedia</a>
+      или официальной странице 
+      <a href='https://developer.mozilla.org/ru/docs/Web/HTML%22%3E'> The Word Wibe Web Consortium (W3C)</a>
+      Но удобнее пользоваться просто сайтом 
+      <a href='http://htmlbook.ru/html%22%3E'> htmlbook.ru</a>
     </p>
     <ul>
       <li>
