--- a/pages/html_layout.html
+++ b/pages/html_layout.html
@@ -18,6 +18,28 @@
       Но удобнее пользоваться просто сайтом 
       <a href='http://htmlbook.ru/html%22%3E'> htmlbook.ru</a>
     </p>
+    <p>
+      Здесь же я оставлю маленькую шпаргалку по основным тегам
+    </p>
+    <p>
+      <ul>
+        <li>&#60;p&#62;&#60;/p&#62; &#8211; абзац</li>
+        <li>&#60;br&#62; &#8211; переход на новую строку</li>
+        <li>&#60;pre&#62;&#60;/pre&#62; &#8211;</li>
+        <li>&#60;code&#62;&#60;/code&#62; &#8211; форматирование с имитацией програмного кода</li>
+        <code>
+          let a = promt()
+          <br>console.log(a)
+          <br>alert(a)
+        </code>
+        <li>&#60;i&#62;&#60;/i&#62; &#8211; <i>курсив</i></li>
+        <li>&#60;b&#62;&#60;/b&#62; &#8211; <b>жирный шрифт</b></li>
+        <li>&#60;mark&#62;&#60;/mark&#62; &#8211; <mark>выделенный шрифт</mark></li>
+        <li>&#60;sup&#62;&#60;/sup&#62; &#8211; <sup>верхнее печатание</sup></li>
+        <li>&#60;sub&#62;&#60;/sub&#62; &#8211; <sub>нижнее печатание</sub></li>
+        <li>&#60;!--необработанный код--&#62; &#8211; комментарии в языке HTML</li>
+      </ul>
+    </p>
     <ul>
       <li>
         <a href="../index.html">Главная страница</a>
