--- a/pages/html_layout.html
+++ b/pages/html_layout.html
@@ -12,11 +12,11 @@
       которые называются тегами. Любой тег состоит из имени, заключенного между знаками &#171;меньше	&#187; и &#171;больше&#187;.
       Примеры тегов 	&#60;h1&#62;, &#60;p&#62;, &#60;ul&#62;. При этом все теги подразделяются на: парные,
       обрабатывающие фрагменты текста, и одиночные, применимые ко всей странице более подробно информация о языке на 
-      <a href='https://ru.wikipedia.org/wiki/HTML%22%3E'> wikipedia</a>
+      <a href='https://ru.wikipedia.org/wiki/HTML'> wikipedia</a>
       или официальной странице 
       <a href='https://developer.mozilla.org/ru/docs/Web/HTML%22%3E'> The Word Wibe Web Consortium (W3C)</a>
       Но удобнее пользоваться просто сайтом 
-      <a href='http://htmlbook.ru/html%22%3E'> htmlbook.ru</a>
+      <a href='https://html5book.ru/html-tags/'> htmlbook.ru</a>
     </p>
     <p>
       Здесь же я оставлю маленькую шпаргалку по основным тегам
