--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li>Верстка
           <ul>
             <li><a href="pages/html_layout.html">HTML верстка</a></li>
+            <li><a href="pages/main.html">Табличная верстка</a></li>
             <li>Табличная верстка</li>
           </ul>
         </li>
