--- a/pages/main.html
+++ b/pages/main.html
@@ -6,15 +6,18 @@
     <title>Document</title>
   </head>
   <body>
-      <table>
+      <table border="1" width="100%">
           <tr>
-              <td></td>
-          </tr>
-          <tr>
-
-          </tr>
-          <tr>
+              <td rowspan="2" width="10"><img src="../images/ht5.png"></td>
+              <td rowspan="2">Название</td>
+              <td>Логин</td>
               
+          </tr>
+          <tr>
+            <td>Пароль</td>
+          </tr>
+          <tr>
+            <td colspan="20">Навигация</td>
           </tr>
       </table>
   </body>
