--- a/pages/main.html
+++ b/pages/main.html
@@ -8,16 +8,49 @@
   <body>
       <table border="1" width="100%">
           <tr>
-              <td rowspan="2" width="10"><img src="../images/ht5.png"></td>
+              <td rowspan="2" width="120"><img src="../images/ht5.png" width="100%"></td>
               <td rowspan="2">Название</td>
               <td>Логин</td>
-              
           </tr>
           <tr>
-            <td>Пароль</td>
+              <td>Пароль</td>
           </tr>
           <tr>
-            <td colspan="20">Навигация</td>
+              <td colspan="20">Навигация</td>
+          </tr>
+          <tr>
+              <td rowspan="2">
+                  <ul>
+                      <li>
+                          <a href="../index.html">Главная страница</a>
+                        </li>
+                        <li>
+                            <a href="CSS.html">О CSS</a>
+                        </li>
+                        <li>
+                            <a href="JS.html">JS програмирование</a>
+                        </li>
+                  </ul>
+                </td>
+                <td rowspan="1" colspan="2"><iframe width="560" height="315" src="https://www.youtube.com/embed/BYnpSIdqXt8" 
+                                                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    Использование таблиц с невидимой границей — известный способ верстки,
+                    применяемый на множестве сайтов. Такая таблица фактически представляет 
+                    собой модульную сетку, в которой удобно размещать отдельные элементы веб-страницы. 
+                    Простота и быстрота верстки, а также корректное отображение в различных браузерах — вот основные преимущества табличной верстки.
+
+                   <p>Благодаря универсальности таблиц и большому числу параметров, управляющих их видом, 
+                       таблицы надолго стали определенным стандартом для верстки веб-страниц. Таблица с невидимой границей представляет 
+                       собой словно модульную сетку, в блоках которой удобно размещать элементы веб-страницы. Тем не менее это не совсем 
+                       правильный подход, ведь каждый объект HTML определен для своих собственных целей и если он используется не по назначению, 
+                       причем повсеместно, это значит, что альтернатив нет. Так оно и было долгое время, пока на смену таблицам при верстке сайтов не пришли слои. 
+                       Это не значит, что слои теперь используются сплошь и рядом, но наметилась четкая тенденция — 
+                       таблицы применяются для размещения табличных данных, а слои — для верстки и оформления.</p>
+                </td>
+                <tr>
+                    <td colspan="2">Подвал</td>
+                </tr>
           </tr>
       </table>
   </body>
