--- a/pages/main.html
+++ b/pages/main.html
@@ -35,11 +35,10 @@
                 <td rowspan="1" colspan="2"><iframe width="560" height="315" src="https://www.youtube.com/embed/BYnpSIdqXt8" 
                                                     title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
                   clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    Использование таблиц с невидимой границей — известный способ верстки,
+                  <p>Использование таблиц с невидимой границей — известный способ верстки,
                     применяемый на множестве сайтов. Такая таблица фактически представляет 
-                    собой модульную сетку, в которой удобно размещать отдельные элементы веб-страницы. 
-                    Простота и быстрота верстки, а также корректное отображение в различных браузерах — вот основные преимущества табличной верстки.
-
+                    собой модульную сетку, в которой удобно размещать отдельные элементы веб-страницы
+                    Простота и быстрота верстки, а также корректное отображение в различных браузерах — вот основные преимущества табличной верстки</p>
                    <p>Благодаря универсальности таблиц и большому числу параметров, управляющих их видом, 
                        таблицы надолго стали определенным стандартом для верстки веб-страниц. Таблица с невидимой границей представляет 
                        собой словно модульную сетку, в блоках которой удобно размещать элементы веб-страницы. Тем не менее это не совсем 
