--- a/pages/CSS.html
+++ b/pages/CSS.html
@@ -2,20 +2,60 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>CSS</title>
+    <script src="script.js"></script>
+    <title>Document</title>
+    <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body>
-    <h1>О CSS</h1>
-    <ul>
-        <li>
-            <a href="../index.html">Главная страница</a>
-        </li>
-        <li>
-            <a href="html_layout.html">О верстке</a>
-        </li>
-        <li>
-           <a href="JS.html">О JS</a>
-        </li>
-    </ul>
+      <table border="1" width="100%">
+          <tr>
+              <td rowspan="2" width="120"><img src="../images/css.png" width="55%" class="img"></td>
+              <td rowspan="2"><h1 class="big">Мой сайт - мой дизайн</h1></td>
+              <td>Логин</td>
+          </tr>
+          <tr>
+              <td>Пароль</td>
+          </tr>
+          <tr>
+              <td colspan="20"><a href="../index.html">Главная страница</a>
+                <a href="main.html">Верстка</a>
+                <a href="JS.html">JS програмирование</a>
+              </td>
+          </tr>
+          <tr>
+              <td rowspan="2">
+                Список товарищей:
+                  <ul>
+                      <li>
+                          1 товарищ
+                        </li>
+                        <li>
+                            2 товарищ
+                        </li>
+                        <li>
+                            3 товарищ
+                        </li>
+                  </ul>
+                </td>
+                <td rowspan="1" colspan="2"><iframe width="560" height="315" src="https://www.youtube.com/embed/BYnpSIdqXt8" 
+                                                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+                  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                  <p>Использование таблиц с невидимой границей — известный способ верстки,
+                    применяемый на множестве сайтов. Такая таблица фактически представляет 
+                    собой модульную сетку, в которой удобно размещать отдельные элементы веб-страницы
+                    Простота и быстрота верстки, а также корректное отображение в различных браузерах — вот основные преимущества табличной верстки</p>
+                   <p>Благодаря универсальности таблиц и большому числу параметров, управляющих их видом, 
+                       таблицы надолго стали определенным стандартом для верстки веб-страниц. Таблица с невидимой границей представляет 
+                       собой словно модульную сетку, в блоках которой удобно размещать элементы веб-страницы. Тем не менее это не совсем 
+                       правильный подход, ведь каждый объект HTML определен для своих собственных целей и если он используется не по назначению, 
+                       причем повсеместно, это значит, что альтернатив нет. Так оно и было долгое время, пока на смену таблицам при верстке сайтов не пришли слои. 
+                       Это не значит, что слои теперь используются сплошь и рядом, но наметилась четкая тенденция — 
+                       таблицы применяются для размещения табличных данных, а слои — для верстки и оформления.</p>
+                </td>
+                <tr>
+                    <td colspan="2">Подвал</td>
+                </tr>
+          </tr>
+      </table>
   </body>
   </html>
