--- a/pages/CSS.html
+++ b/pages/CSS.html
@@ -6,18 +6,18 @@
     <title>Document</title>
     <link rel="stylesheet" href="../styles/style.css">
   </head>
-  <body>
+  <body bgcolor="#9932CC">
       <table border="1" width="100%">
           <tr>
               <td rowspan="2" width="120"><img src="../images/css.png" width="55%" class="img"></td>
               <td rowspan="2"><h1 class="big">Мой сайт - мой дизайн</h1></td>
-              <td>Логин</td>
+              <td class="big">Логин</td>
           </tr>
           <tr>
-              <td>Пароль</td>
+              <td class="big">Пароль</td>
           </tr>
           <tr>
-              <td colspan="20"><a href="../index.html">Главная страница</a>
+              <td colspan="20" class="hrefs"><a href="../index.html">Главная страница</a>
                 <a href="main.html">Верстка</a>
                 <a href="JS.html">JS програмирование</a>
               </td>
