--- a/pages/html_layout.html
+++ b/pages/html_layout.html
@@ -25,7 +25,7 @@
       <ul>
         <li>&#60;p&#62;&#60;/p&#62; &#8211; абзац</li>
         <li>&#60;br&#62; &#8211; переход на новую строку</li>
-        <li>&#60;pre&#62;&#60;/pre&#62; &#8211;</li>
+        <li>&#60;pre&#62;&#60;/pre&#62; &#8211; предварительное форматирование как есть</li>
         <li>&#60;code&#62;&#60;/code&#62; &#8211; форматирование с имитацией програмного кода</li>
         <code>
           let a = promt()
