--- a/pages/CSS.html
+++ b/pages/CSS.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body bgcolor="#9932CC">
-      <table border="1" width="100%">
+      <table border="1" width="100%" class="tabl">
           <tr>
               <td rowspan="2" width="120"><img src="../images/css.png" width="55%" class="img"></td>
               <td rowspan="2"><h1 class="big">Мой сайт - мой дизайн</h1></td>
@@ -27,33 +27,41 @@
                 Список товарищей:
                   <ul>
                       <li>
-                          1 товарищ
+                          товарищ Сталин
                         </li>
                         <li>
-                            2 товарищ
+                            2 товарищ Ленин
                         </li>
                         <li>
-                            3 товарищ
+                            3 товарищ Бобик
                         </li>
                   </ul>
                 </td>
-                <td rowspan="1" colspan="2"><iframe width="560" height="315" src="https://www.youtube.com/embed/BYnpSIdqXt8" 
-                                                    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
-                  clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                  <p>Использование таблиц с невидимой границей — известный способ верстки,
-                    применяемый на множестве сайтов. Такая таблица фактически представляет 
-                    собой модульную сетку, в которой удобно размещать отдельные элементы веб-страницы
-                    Простота и быстрота верстки, а также корректное отображение в различных браузерах — вот основные преимущества табличной верстки</p>
-                   <p>Благодаря универсальности таблиц и большому числу параметров, управляющих их видом, 
-                       таблицы надолго стали определенным стандартом для верстки веб-страниц. Таблица с невидимой границей представляет 
-                       собой словно модульную сетку, в блоках которой удобно размещать элементы веб-страницы. Тем не менее это не совсем 
-                       правильный подход, ведь каждый объект HTML определен для своих собственных целей и если он используется не по назначению, 
-                       причем повсеместно, это значит, что альтернатив нет. Так оно и было долгое время, пока на смену таблицам при верстке сайтов не пришли слои. 
-                       Это не значит, что слои теперь используются сплошь и рядом, но наметилась четкая тенденция — 
-                       таблицы применяются для размещения табличных данных, а слои — для верстки и оформления.</p>
+                <td>
+                  <p>CSS - это язык оформления HTML-документов. За более подробной информацией <a href='https://gb.ru/posts/chto-takoe-css-obyasnyaem-prostymi-slovami'> сюда</a>
+                  Так как он является вспомогательным языком, то существует несколько способов его добавления на web-страницу:</p>
+                  <ul>
+                    <li>Внутренний &#60;link rel="stylesheet" href="style.css"&#62;</li>
+                    <li>Внутренний глобальный &#60;style&#62;&#60;/style&#62;</li>
+                    <li>Внутренний локальный &#60;span style="color: red"&#62;&#60;/style&#62;</li>
+                  </ul>
+                  <p>Синтаксис языва выглядит следующим образом: сначала указывается изменяемый обьект с помощью <b>селектора</b>
+                  После этого в фигурных скобках перечисляются через точку с запятой изменяемые свойства эдемента(<i>цвет, размер, расположение и т.д.</i>)
+                  , затем напротив каждого свойства указывается значение(<em>red, left, 1px и т.д.</em>). Например:</p>
+                  <pre>
+                    <b>table</b> {
+                      <i>width</i>: <em>80%</em>;
+                      <i>border-color</i>: <em>white</em>;
+                      <i>border-style</i>: <em>groove</em>;
+                      <i>border-width</i>: <em>5px</em>;
+                    }
+                  </pre>
+                  В ситуации когда изменить необходимо только неоторые элементы, следует пользаваться указателями класса: когда одни и теже теги принадлежат разным классам и оформляются по разному.
+                  <br>&#60;table class="header"&#62;&#60;/table&#62;</br>
+                  &#60;table class="main"&#62;&#60;/table&#62;
                 </td>
                 <tr>
-                    <td colspan="2">Подвал</td>
+                    <<td colspan="2"><strong>Ученик 10 класса УнШ ВДФУ г. Владивостока. Сайты-визитки от 1 тыс. рубдей. Кабинет №</strong></td>
                 </tr>
           </tr>
       </table>
