--- a/pages/CSS.html
+++ b/pages/CSS.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../styles/style.css">
   </head>
   <body bgcolor="#9932CC">
-      <table border="1" width="100%" class="tabl">
+      <table border="4" width="100%" class="tabl">
           <tr>
               <td rowspan="2" width="120"><img src="../images/css.png" width="55%" class="img"></td>
               <td rowspan="2"><h1 class="big">Мой сайт - мой дизайн</h1></td>
@@ -61,7 +61,7 @@
                   &#60;table class="main"&#62;&#60;/table&#62;
                 </td>
                 <tr>
-                    <<td colspan="2"><strong>Ученик 10 класса УнШ ВДФУ г. Владивостока. Сайты-визитки от 1 тыс. рубдей. Кабинет №</strong></td>
+                    <<td colspan="2"><strong>Ученик 10 класса УнШ ВДФУ г. Владивостока. Сайты-визитки от 1 тыс. рублей. Кабинет №</strong></td>
                 </tr>
           </tr>
       </table>
