--- a/pages/JS.html
+++ b/pages/JS.html
@@ -2,20 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>JS</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <script defer src="../styles/script.js"></script>
   </head>
   <body>
-    <h1>О JS</h1>
-    <ul>
-        <li>
-            <a href="../index.html">Главная страница</a>
-        </li>
-        <li>
-           <a href="html_layout.html">О верстке</a>
-        </li>
-        <li>
-          <a href="CSS.html">О CSS</a>
-        </li>
-    </ul>
   </body>
   </html>
